[project]
name = "lorem-ipsum"
version = "0.1.0"
description = ""
authors = [
    {name = "Dalton Ma",email = "85321730+bohrium2b@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.44.0)",
    "safetensors (>=0.4.3)",
    "accelerate (>=0.33.0)",
    "sentencepiece (>=0.1.99)",
    "torch"
]


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cpu"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

